--- a/.github/workflows/build-ubuntu.yml
+++ b/.github/workflows/build-ubuntu.yml
@@ -58,5 +58,5 @@ jobs:
     - name: Upload artifact
     - uses: actions/upload-artifact@v4
         with:
-          name: Release Ubuntu 22.04 x64 CPU
+          name: release-ubuntu-22.04-x64-cpu-only
           path: DataLoader/bin/Release.zip
