--- a/.github/workflows/build-ubuntu.yml
+++ b/.github/workflows/build-ubuntu.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Build VectorSearch.dll dynamic library
         run: |
           cd VectorSearch
-          g++ -shared -I eigen-3.4.0 -fPIC -O3 -o VectorSearch.dll dllmainUnix.cpp
+          g++ -shared -I eigen-3.4.0 -fPIC -fopenmp -O3 -o VectorSearch.dll dllmainUnix.cpp
           cp VectorSearch.dll ..
       - name: Build DataLoader
         run: |
