--- a/.github/workflows/build-ubuntu.yml
+++ b/.github/workflows/build-ubuntu.yml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Install dependencies
         run: |
-          apt-get update && apt-get install -y gnupg \
+          sudo apt-get update && sudo apt-get install -y gnupg \
           gnupg1 \
           gnupg2 \
           software-properties-common \
