change build to publish

--- a/.github/workflows/build-ubuntu.yml
+++ b/.github/workflows/build-ubuntu.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Build DataLoader
         run: |
           cd DataLoader
-          dotnet build DataLoader.csproj --runtime ubuntu.22.04-x64 --self-contained --configuration Release
+          dotnet publish DataLoader.csproj --runtime ubuntu.22.04-x64 --self-contained --configuration Release
       - name: Copy VectorSearch.dll to Release
         run: |
           cp VectorSearch.dll DataLoader/bin/Release/net6.0/ubuntu.22.04-x64
