--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -28,10 +28,11 @@ jobs:
           cd VectorSearch
           g++ -shared -I eigen-3.4.0 -fPIC -fopenmp -O3 -o VectorSearch.dll dllmainUnix.cpp
           cp VectorSearch.dll ..
-      - name: Build DataLoader
+      - name: Install NET
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '6'
+      - name: Build DataLoader
         run: |
           cd DataLoader
           dotnet publish DataLoader.csproj --runtime osx-arm64 --self-contained --configuration Release
