--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Build VectorSearch.dll dynamic library
         run: |
           cd VectorSearch
-          g++ -shared -I eigen-3.4.0 -fPIC -fopenmp -O3 -o VectorSearch.dll dllmainUnix.cpp
+          gcc-13 -shared -I eigen-3.4.0 -fPIC -fopenmp -O3 -o VectorSearch.dll dllmainUnix.cpp
           cp VectorSearch.dll ..
       - name: Install NET
         uses: actions/setup-dotnet@v4
