--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -5,16 +5,10 @@ on:
 
 jobs:
   Build-for-macOS:
-    runs-on: macos-12
+    runs-on: macos-14-arm64
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
-      - name: Install Homebrew
-        run: |
-          /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
-      - name: Install gcc
-        run: |
-          brew install gcc
       - name: Copy and unzip eigen
         run: |
           cp eigen-3.4.0.zip VectorSearch
