--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   Build-for-macOS:
-    runs-on: macos-14-arm64
+    runs-on: macos-14
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
