--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -14,17 +14,10 @@ jobs:
           cp eigen-3.4.0.zip VectorSearch
           cd VectorSearch
           unzip eigen-3.4.0.zip
-      - name: Install dependencies for C++ compilation
-        run: |
-          brew install llvm
-          brew install libomp
-          echo 'export PATH="/opt/homebrew/opt/llvm/bin:$PATH"' >> /Users/runner/.bash_profile
-          export LDFLAGS="-L/opt/homebrew/opt/libomp/lib"
-          export CPPFLAGS="-I/opt/homebrew/opt/libomp/include"
       - name: Build VectorSearch.dll dynamic library
         run: |
           cd VectorSearch
-          clang -shared -I eigen-3.4.0 -fPIC -fopenmp -O3 -o VectorSearch.dll dllmainUnix.cpp
+          g++-13 -shared -I eigen-3.4.0 -fPIC -fopenmp -O3 -o VectorSearch.dll dllmainUnix.cpp
           cp VectorSearch.dll ..
       - name: Install NET
         uses: actions/setup-dotnet@v4
