--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -14,11 +14,15 @@ jobs:
           cp eigen-3.4.0.zip VectorSearch
           cd VectorSearch
           unzip eigen-3.4.0.zip
+      - name: Reinstall XCode and gcc
+        run: |
+          sudo rm -rf /Library/Developer/CommandLineTools
+          xcode-select --install
+          brew reinstall -sv gcc
       - name: Build VectorSearch.dll dynamic library
         run: |
-          brew reinstall -sv gcc
           cd VectorSearch
-          g++-13 -Wl,ld_classic -shared -I eigen-3.4.0 -fPIC -fopenmp -O3 -o VectorSearch.dll dllmainUnix.cpp
+          g++-13 -shared -I eigen-3.4.0 -fPIC -fopenmp -O3 -o VectorSearch.dll dllmainUnix.cpp
           cp VectorSearch.dll ..
       - name: Install NET
         uses: actions/setup-dotnet@v4
