--- a/.github/workflows/test-ubuntu.yml
+++ b/.github/workflows/test-ubuntu.yml
@@ -22,4 +22,5 @@ jobs:
       - name: Test
         run: |
           cd DataLoaderExecutable/ubuntu22.04_x64/uncompressed
+          chmod +x DataLoader
           ./DataLoader EigenSIntB 10000
