--- a/.github/workflows/test-linux.yml
+++ b/.github/workflows/test-linux.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Install dependencies
         run: |
-          sudo apt-get update && sudo apt-get install -y curl g++
+          apt-get update && apt-get install -y curl g++
       - name: Install NET
         uses: actions/setup-dotnet@v4
         with:
